@@ -8,6 +8,13 @@ bzr 0.8.1  2006-05-12
     * Nicer messages from 'commit' in the case of renames, and correct
       messages when a merge has occured. (Robert Collins, Martin Pool)
 
+  CHANGES:
+
+    * Make editor invocation comply with Debian Policy. First check
+      environment variables VISUAL and EDITOR, then try editor from
+      alternatives system. If that all fails, fall back to the pre-defined
+      list of editors. (#42904, Olaf Conradi)
+
   INTERNALS:
 
     * New public api in InventoryEntry - 'describe_change(old, new)' which
